--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InteractionController.cs" />
     <Compile Include="Controllers\LivestreamController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\QAController.cs" />
     <Compile Include="Controllers\SessionController.cs" />
@@ -6975,6 +6976,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\CustomCss\admin.css" />
+    <Content Include="Content\CustomCss\login.css" />
     <Content Include="Content\CustomCss\QA.css" />
     <Content Include="Content\CustomCss\sponsor.css" />
     <Content Include="Content\CustomCss\style.default.css" />
@@ -7125,6 +7127,13 @@
     <Content Include="packages\EntityFramework.6.1.3\tools\EntityFramework.PowerShell.dll" />
     <Content Include="packages\EntityFramework.6.1.3\tools\EntityFramework.PowerShell.Utility.dll" />
     <Content Include="packages\EntityFramework.6.1.3\tools\migrate.exe" />
+    <Content Include="Content\fonts\Iciel\iCielPanton-Black.otf" />
+    <Content Include="Content\fonts\Iciel\iCielPanton-BlackItalic.otf" />
+    <Content Include="Content\fonts\Iciel\iCielPanton-Light.otf" />
+    <Content Include="Content\fonts\Iciel\iCielPanton-LightItalic.otf" />
+    <Content Include="Content\fonts\Gotham\GothamRnd-Bold.otf" />
+    <Content Include="Content\fonts\Gotham\GothamRnd-Light.otf" />
+    <Content Include="Content\fonts\Gotham\GothamRnd-Medium.otf" />
     <None Include="packages\jQuery.1.10.2\Content\Scripts\jquery-1.10.2-vsdoc.js" />
     <Content Include="packages\jQuery.1.10.2\Content\Scripts\jquery-1.10.2.js" />
     <Content Include="packages\jQuery.1.10.2\Content\Scripts\jquery-1.10.2.min.js" />
@@ -8583,6 +8592,7 @@
     <Content Include="Views\Voting\Index.cshtml" />
     <Content Include="Views\QA\Index.cshtml" />
     <Content Include="Views\Events\Index.cshtml" />
+    <Content Include="Views\Login\index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
