--- a/Capstone-Project-EIP/CapstoneProjectAdmin/bin/HmsService.dll.config
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/bin/HmsService.dll.config
@@ -5,8 +5,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="HmsService" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BINHNQSE62065\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=SE62065;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="Entities" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BINHNQSE62065\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=SE62065;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HmsService" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HuyHDLSE61921\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=0933879970;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-SVO5V0S\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
