--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -7134,6 +7134,7 @@
     <Content Include="Content\fonts\Gotham\GothamRnd-Bold.otf" />
     <Content Include="Content\fonts\Gotham\GothamRnd-Light.otf" />
     <Content Include="Content\fonts\Gotham\GothamRnd-Medium.otf" />
+    <Content Include="Content\Filestack\filestack.min.js" />
     <None Include="packages\jQuery.1.10.2\Content\Scripts\jquery-1.10.2-vsdoc.js" />
     <Content Include="packages\jQuery.1.10.2\Content\Scripts\jquery-1.10.2.js" />
     <Content Include="packages\jQuery.1.10.2\Content\Scripts\jquery-1.10.2.min.js" />
