--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
@@ -444,6 +444,7 @@
     <Content Include="Content\bootstrap\Poll\js\bootstrap.js" />
     <Content Include="Content\bootstrap\Poll\js\jquery-1.11.1.js" />
     <Content Include="Content\bootstrap\Poll\js\processBar.js" />
+    <Content Include="Content\CustomCss\customNav.css" />
     <Content Include="Content\CustomCss\home.css" />
     <Content Include="Content\CustomCss\main.css" />
     <Content Include="Content\CustomCss\QA.css" />
