--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Controllers\LivestreamController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ManageSessionController.cs" />
     <Compile Include="Controllers\QAController.cs" />
     <Compile Include="Controllers\SessionController.cs" />
     <Compile Include="Controllers\SpeakerController.cs" />
@@ -7135,6 +7136,7 @@
     <Content Include="Content\fonts\Gotham\GothamRnd-Light.otf" />
     <Content Include="Content\fonts\Gotham\GothamRnd-Medium.otf" />
     <Content Include="Content\Filestack\filestack.min.js" />
+    <Content Include="Content\CustomJs\manage.session.js" />
     <None Include="packages\jQuery.1.10.2\Content\Scripts\jquery-1.10.2-vsdoc.js" />
     <Content Include="packages\jQuery.1.10.2\Content\Scripts\jquery-1.10.2.js" />
     <Content Include="packages\jQuery.1.10.2\Content\Scripts\jquery-1.10.2.min.js" />
@@ -8596,6 +8598,7 @@
     <Content Include="Views\Login\index.cshtml" />
     <Content Include="Views\Shared\_LayoutEvent.cshtml" />
     <Content Include="Views\Events\Add.cshtml" />
+    <Content Include="Views\ManageSession\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
