+ Đổi màu nút thêm sự kiện + Chỉnh lại chỉ load ViewModel Interaction cho đỡ nặng (làm render trang chậm) + Cắt javascript và html ở trang cấu hình session ra 2 file riêng (cshtml và js)

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -241,6 +241,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\ActivityViewModel.cs" />
     <Compile Include="ViewModel\CommentsViewModel.cs" />
+    <Compile Include="ViewModel\InteractionViewModel.cs" />
     <Compile Include="ViewModel\QAViewModel.cs" />
     <Compile Include="ViewModel\QuestionViewModel.cs" />
     <Compile Include="ViewModel\SessionViewModel.cs" />
