--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Controllers\SessionController.cs" />
     <Compile Include="Controllers\SpeakerController.cs" />
     <Compile Include="Controllers\SponsorController.cs" />
+    <Compile Include="Controllers\SystemAdminController.cs" />
     <Compile Include="Controllers\TimelineController.cs" />
     <Compile Include="Controllers\VotingController.cs" />
     <Compile Include="Global.asax.cs">
@@ -8605,6 +8606,7 @@
     <Content Include="Views\Events\Add.cshtml" />
     <Content Include="Views\ManageSession\Index.cshtml" />
     <Content Include="Views\File\Index.cshtml" />
+    <Content Include="Views\SystemAdmin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
