--- a/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/CapstoneProjectAdmin.csproj
@@ -200,6 +200,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\ActivityAPIController.cs" />
+    <Compile Include="API\EventCollectionAPIController.cs" />
     <Compile Include="API\FileController.cs" />
     <Compile Include="API\HomeController.cs" />
     <Compile Include="API\InteractionAPIController.cs" />
@@ -245,6 +246,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\ActivityViewModel.cs" />
     <Compile Include="ViewModel\CommentsViewModel.cs" />
+    <Compile Include="ViewModel\EventCollectionViewModel.cs" />
     <Compile Include="ViewModel\EventViewModel.cs" />
     <Compile Include="ViewModel\InteractionViewModel.cs" />
     <Compile Include="ViewModel\QAViewModel.cs" />
