+ Thêm sweetaler cho trang landing page + Validate cho form nhập thông tin đăng kí tham gia ở trang landing page + Load tọa độ và marker cho landing page + Thêm cột IsLandingPage ở bảng Event và chỉnh được event nào được hiện lên

--- a/Capstone-Project-EIP/CapstoneProject-EIP/CapstoneProject-EIP.csproj
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/CapstoneProject-EIP.csproj
@@ -223,10 +223,36 @@
     <Compile Include="Models\IndexViewModel.cs" />
     <Compile Include="Models\JsonContent.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MyEnums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\ActivityViewModel.cs" />
+    <Compile Include="ViewModel\EventViewModel.cs" />
+    <Compile Include="ViewModel\SessionViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-sweetalert-master\.gitignore" />
+    <Content Include="Content\bootstrap-sweetalert-master\assets\bootstrap-sweetalert.png" />
+    <Content Include="Content\bootstrap-sweetalert-master\assets\docs.css" />
+    <Content Include="Content\bootstrap-sweetalert-master\assets\thumbs-up.jpg" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\gulpfile-wrap-template.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\ie9.css" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\loader-animation.css" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\modules\default-params.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\modules\handle-click.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\modules\handle-dom.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\modules\handle-key.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\modules\handle-swal-dom.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\modules\injected-html.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\modules\set-params.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\modules\utils.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dev\sweetalert.es6.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dist\sweetalert.css" />
+    <Content Include="Content\bootstrap-sweetalert-master\dist\sweetalert.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\dist\sweetalert.min.js" />
+    <Content Include="Content\bootstrap-sweetalert-master\index.html" />
+    <Content Include="Content\bootstrap-sweetalert-master\test\index.html" />
+    <Content Include="Content\bootstrap-sweetalert-master\test\tests.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\register.js" />
@@ -454,6 +480,19 @@
     <Content Include="Content\Template\eventalk\fonts\fontawesome-webfont3295.woff" />
     <Content Include="Content\Template\eventalk\fonts\fontawesome-webfontd41d.eot" />
     <Content Include="Content\Template\eventalk\img\song.ogg" />
+    <Content Include="Content\bootstrap-sweetalert-master\.editorconfig" />
+    <Content Include="Content\bootstrap-sweetalert-master\.jshintrc" />
+    <Content Include="Content\bootstrap-sweetalert-master\.travis.yml" />
+    <Content Include="Content\bootstrap-sweetalert-master\bootstrap\mixins.less" />
+    <Content Include="Content\bootstrap-sweetalert-master\bootstrap\variables.less" />
+    <Content Include="Content\bootstrap-sweetalert-master\bower.json" />
+    <Content Include="Content\bootstrap-sweetalert-master\Gruntfile.coffee" />
+    <Content Include="Content\bootstrap-sweetalert-master\lib\sweet-alert-animations.less" />
+    <Content Include="Content\bootstrap-sweetalert-master\lib\sweet-alert-combine.less" />
+    <Content Include="Content\bootstrap-sweetalert-master\lib\sweet-alert.less" />
+    <Content Include="Content\bootstrap-sweetalert-master\LICENSE" />
+    <Content Include="Content\bootstrap-sweetalert-master\package.json" />
+    <Content Include="Content\bootstrap-sweetalert-master\README.md" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
