--- a/Capstone-Project-EIP/CapstoneProject-EIP/CapstoneProject-EIP.csproj
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/CapstoneProject-EIP.csproj
@@ -255,6 +255,8 @@
     <Content Include="Content\bootstrap-sweetalert-master\test\tests.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\LogoMakr_6CVPn5.png" />
+    <Content Include="Content\img\LogoMakr_7clv31.png" />
     <Content Include="Content\register.js" />
     <Content Include="Content\style.css" />
     <Content Include="Content\Template\eventalk\404.html" />
