+ Sửa lỗi không add được livestream rổng + Sửa lỗi nếu link livestream sai bị lỗi

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
@@ -458,6 +458,7 @@
     <Content Include="Content\CustomCss\sponsor.css" />
     <Content Include="Content\CustomCss\timeline.css" />
     <Content Include="Content\CustomCss\voting.css" />
+    <Content Include="Content\CustomJs\main.js" />
     <Content Include="Content\img\archive.png" />
     <Content Include="Content\img\data.jpg" />
     <Content Include="Content\img\excel.png" />
