--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Web.config
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="HmsService" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.79.142.115;initial catalog=Demo;persist security info=True;user id=sa;password=zaQ@1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="HmsEntities" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.79.142.115;initial catalog=Demo;persist security info=True;user id=sa;password=zaQ@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HmsService" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BINHNQSE62065\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=SE62065;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HmsEntities" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BINHNQSE62065\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=SE62065;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
