--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Web.config
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Web.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=103.79.142.115;initial catalog=Demo;User Id=sa;Password=zaQ@1234" providerName="System.Data.SqlClient" />
-    <add name="IdentityEntities" connectionString="Server=103.79.142.115;Database=Demo;User Id=sa;Password=zaQ@1234" providerName="System.Data.SqlClient" />
-    <add name="SkyUpEntities" connectionString="metadata=res://*/Models.Entities.SkyUpEntities.csdl|res://*/Models.Entities.SkyUpEntities.ssdl|res://*/Models.Entities.SkyUpEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.79.142.115;initial catalog=Demo;persist security info=True;user id=sa;password=zaQ@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="HmsEntities" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.79.142.115;initial catalog=Demo;persist security info=True;user id=sa;password=zaQ@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="data source=202.78.224.146;initial catalog=JoinVN;User Id=sa;Password=zaQ@1234" providerName="System.Data.SqlClient" />
+    <add name="IdentityEntities" connectionString="Server=202.78.224.146;Database=JoinVN;User Id=sa;Password=zaQ@1234" providerName="System.Data.SqlClient" />
+    <add name="SkyUpEntities" connectionString="metadata=res://*/Models.Entities.SkyUpEntities.csdl|res://*/Models.Entities.SkyUpEntities.ssdl|res://*/Models.Entities.SkyUpEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=202.78.224.146;initial catalog=JoinVN;persist security info=True;user id=sa;password=zaQ@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HmsEntities" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=202.78.224.146;initial catalog=JoinVN;persist security info=True;user id=sa;password=zaQ@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -23,7 +23,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" requestValidationMode="2.0" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
