[Admin] Fix something when wrong

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/CapstoneProjectClient.csproj
@@ -465,6 +465,7 @@
     <Content Include="Content\img\excel.png" />
     <Content Include="Content\img\file.png" />
     <Content Include="Content\img\image.png" />
+    <Content Include="Content\img\LogoVDEforum.png" />
     <Content Include="Content\img\LogoMakr_2xl9Su.png" />
     <Content Include="Content\img\LogoMakr_6CVPn5.png" />
     <Content Include="Content\img\LogoMakr_7clv31.png" />
